moved email to the init, made size configurable, added comments and optimised a bunch of code

--- a/config/felicity.ini
+++ b/config/felicity.ini
@@ -1,7 +1,12 @@
+[Felicity]
+email=you@example.com
+
 [Rackspace]
 user=your_username
 key=your_api_key
 distro=Debian
+size=256
+
 [Amazon]
 user=your_user_key_id
 key=your_secret_api_key
