have now abstracted Rackspace out of the code (except that deploy_node is still rackspace-specific I think)

--- a/config/felicity.ini
+++ b/config/felicity.ini
@@ -1,12 +1,15 @@
 [Felicity]
 email=you@example.com
+provider=Rackspace
 
 [Rackspace]
+driver=RACKSPACE
 user=your_username
 key=your_api_key
 distro=Debian
 size=256
 
 [Amazon]
+driver=EC2
 user=your_user_key_id
 key=your_secret_api_key
