oh so many changes

--- a/config/felicity.ini
+++ b/config/felicity.ini
@@ -1,6 +1,7 @@
 [Felicity]
 email=you@example.com
-provider=Rackspace
+vpsprovider=Rackspace
+backupprovider=Amazon
 passphrase=secret_gpg_passphrase
 
 [Rackspace]
@@ -8,7 +9,7 @@ driver=RACKSPACE
 user=your_username
 key=your_api_key
 distro=Debian
-size=256
+size=512
 
 [Amazon]
 driver=EC2
