fixes, makes rackspace cloud duplicity containers work again

--- a/config/felicity.ini
+++ b/config/felicity.ini
@@ -1,7 +1,7 @@
 [Felicity]
 email=you@example.com
 vpsprovider=Rackspace
-backupprovider=Amazon
+backupprovider=Rackspace
 passphrase=secret_gpg_passphrase
 
 [Rackspace]
