Revert "fixes, makes rackspace cloud duplicity containers work again"
This reverts commit 4ff8cb339a6e775a5eec8330a10988386e9d4858.

--- a/config/felicity.ini
+++ b/config/felicity.ini
@@ -1,7 +1,7 @@
 [Felicity]
 email=you@example.com
 vpsprovider=Rackspace
-backupprovider=Rackspace
+backupprovider=Amazon
 passphrase=secret_gpg_passphrase
 
 [Rackspace]
